worked on python def function and unit test function

--- a/qhack-python-on-vscode.ipynb
+++ b/qhack-python-on-vscode.ipynb
@@ -173,6 +173,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -407,6 +412,130 @@
     "    return Num1 *10\n",
     "result = multiplyNum(5)\n",
     "print(result)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unit tests for Python functions \n",
+    "\n",
+    "(https://www.freecodecamp.org/)\n",
+    "\n",
+    "Well, when working on a large project, you'll often have to update certain modules and refactor code as needed. But such changes can have unintended consequences on other modules that use an updated module within them. This can sometimes break existing functionality.\n",
+    "\n",
+    "As a developer, you should test your code to ensure that all modules in the application work as intended. Unit tests let you check if small isolated units of code function correctly and enable you to fix inconsistencies that arise from updates and refactoring.\n",
+    "\n",
+    "This guide will help you get started with unit testing in Python. You'll learn how to use Python's built-in unittest module to set up and run unit tests and write test cases to test Python functions. You'll also learn how to test functions that raise exceptions.\n",
+    "\n",
+    "**Let's start:**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing in Python – First Steps\n",
+    "We'll start by defining a Python function and write unit tests to check if it works as expected. To focus on how to set up unit tests, we'll consider a simple function is_prime(), that takes in a number and checks whether or not it is prime."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def is_prime(num):\n",
+    "    '''Check if num is prime or not.'''\n",
+    "    for i in range(2,int(math.sqrt(num))+1):\n",
+    "        if num%i==0:\n",
+    "            return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s start a Python REPL, call the function is_prime() with arguments, and verify the results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'prime_number' from 'math' (/Users/fatah/miniconda3/lib/python3.9/lib-dynload/math.cpython-39-darwin.so)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmath\u001b[39;00m \u001b[39mimport\u001b[39;00m prime_number\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mprime_number\u001b[39;00m \u001b[39mimport\u001b[39;00m is_prime\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'prime_number' from 'math' (/Users/fatah/miniconda3/lib/python3.9/lib-dynload/math.cpython-39-darwin.so)"
+     ]
+    }
+   ],
+   "source": [
+    "from math import prime_number\n",
+    "from prime_number import is_prime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from prime_number import is_prime\n",
+    "is_prime(3)\n",
+    "True\n",
+    "is_prime(5)\n",
+    "True\n",
+    "is_prime(12)\n",
+    "False\n",
+    "is_prime(8)\n",
+    "False\n",
+    "assert is_prime(7) == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'prime_number'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39munittest\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# import the is_prime function\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mprime_number\u001b[39;00m \u001b[39mimport\u001b[39;00m isprime\n\u001b[1;32m      4\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mTestPrime\u001b[39;00m(unittest\u001b[39m.\u001b[39mTestCase):\n\u001b[1;32m      5\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39mtest_two\u001b[39m(\u001b[39mself\u001b[39m):\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'prime_number'"
+     ]
+    }
+   ],
+   "source": [
+    "import unittest\n",
+    "# import the is_prime function\n",
+    "from prime_number import isprime\n",
+    "class TestPrime(unittest.TestCase):\n",
+    "    def test_two(self):\n",
+    "        self.assertTrue(is_prime(2))\n",
+    "    def test_five(self):\n",
+    "    \tself.assertTrue(is_prime(5))\n",
+    "    def test_nine(self):\n",
+    "    \tself.assertFalse(is_prime(9))\n",
+    "    def test_eleven(self):\n",
+    "    \tself.assertTrue(is_prime(11))\n",
+    "if __name__=='__main__':\n",
+    "\tunittest.main()"
    ]
   },
   {
